--- a/WebAppAngular/Views/Shared/_Layout.cshtml
+++ b/WebAppAngular/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
         @RenderSection("SPAViews", required: false)
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - ready4Build</p>
+            <p>&copy; @DateTime.Now.Year</p>
         </footer>
     </div>
 
